--- a/playerStats/app/templates/details.html
+++ b/playerStats/app/templates/details.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
+{% extends "master.html" %}
+{% block title %} Pagina Principal {% endblock title%}
+{% block content %}
         <h1>{{ Players.name }} {{ Players.lastname }}</h1>
   
         <p>AGE: {{ Players.age }}</p>
@@ -19,5 +11,4 @@
 
         <p>Back to <a href="/app">Players</a></p>
 
-    </body>
-</html>
+{% endblock content %}
