--- a/playerStats/app/templates/index.html
+++ b/playerStats/app/templates/index.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Player Stats</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
+{% extends "master.html" %}
+{% block title %} Pagina Principal {% endblock title%}
+{% block content %}
         <h1>Pagina Principal - Player Stats</h1>
         <p>Pagina destinada as stats dos jogadores mais dominantes atualmente na NBA!</p>
         <ul>
@@ -22,5 +10,4 @@
         <li>Nenhum jogador encontrado.</li>
         {% endfor %}
         </ul>
-    </body>
-</html>
+{% endblock content %}
