--- a/playerStats/app/templates/index.html
+++ b/playerStats/app/templates/index.html
@@ -3,11 +3,9 @@
 {% block content %}
         <h1>Pagina Principal - Player Stats</h1>
         <p>Pagina destinada as stats dos jogadores mais dominantes atualmente na NBA!</p>
-        <ul>
+        <ul class="list-group list-group-flush">
             {% for x in Players %}
-        <li><a href="details/{{ x.id }}">{{ x.name }} {{ x.lastname }} </li>
-        {% empty %}
-        <li>Nenhum jogador encontrado.</li>
+        <li class="list-group-item"><a href="details/{{ x.id }}">{{ x.name }} {{ x.lastname }} </li>
         {% endfor %}
         </ul>
 {% endblock content %}
