--- a/playerStats/app/static/css/style.css
+++ b/playerStats/app/static/css/style.css
@@ -1,3 +1,10 @@
-h1{
-    padding: 10% !important;
+body, h1{
+    padding: 5dvh !important;
     }
+
+footer{
+    padding: 5dvh;
+    display: flex;
+   justify-content: center;
+   align-items: center;
+}
